Add Geometry singleton for processing geometry in C++ and QML

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(spectacle
     CommandLineOptions.cpp
     RecordingModeModel.cpp
     ExportManager.cpp
+    Geometry.cpp
     PlasmaVersion.cpp
     ScreenShotEffect.cpp
     SpectacleCore.cpp
