PlatformXcb: use real monitor geometry instead of unscaling QScreen
Avoids precision loss issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,7 @@ if (KF${QT_MAJOR_VERSION}Purpose_FOUND)
     set(PURPOSE_FOUND 1)
 endif()
 
-find_package(XCB COMPONENTS XFIXES IMAGE UTIL CURSOR)
+find_package(XCB COMPONENTS XFIXES IMAGE UTIL CURSOR RANDR)
 set(XCB_COMPONENTS_ERRORS FALSE)
 if (XCB_FOUND)
     if (QT_MAJOR_VERSION STREQUAL "5")
