Don't include ECMQueryQmake and use ECMFindQmlModule
...instead of ECMQMLModules.
ECMQueryQmake isn't needed anymore because query_qmake was replaced
with ecm_query_qt in [1], which then was removed in [2].

[1] e7e2a23fd0bd8fdc8de5b70c97e62c4dacdd7392
[2] 8d845e429f752d7feb0a6136463d1c4ca09ecb2c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,11 +30,10 @@ include(ECMSetupVersion)
 include(FeatureSummary)
 include(ECMQtDeclareLoggingCategory)
 include(ECMAddTests)
-include(ECMQueryQmake)
 include(KDEClangFormat)
 include(KDEGitCommitHooks)
 include(ECMDeprecationSettings)
-include(ECMQMLModules)
+include(ECMFindQmlModule)
 
 # find dependencies
 
