--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -10,4 +10,7 @@
 /* Set the Spectacle version from CMake */
 #cmakedefine SPECTACLE_VERSION "@SPECTACLE_VERSION@"
 
+/* Set the QML module URI from CMake */
+#cmakedefine SPECTACLE_QML_URI "@SPECTACLE_QML_URI@"
+
 #endif
