Remove obsolete kconf_update .upd files, add unified .upd file with docs
The old .upd files only work correctly with kconf_update 5 and some of
them used incorrect versions. We're now on kconf_update 6. The new .upd
file doesn't actually do anything right now, but it has a big comment
saying how new update scripts should be added to the file. Using only
one file with standardized naming formats for update sections and
scripts will make it easier to keep track of things.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,8 +109,7 @@ if(NOT XCB_CURSOR_FOUND)
 endif()
 
 # add the spectacle.upd file
-install(FILES conf/update/spectacle_clipboard.upd DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
-install(FILES conf/update/50-clipboard_settings_change.py DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
+install(FILES kconf_update/spectacle.upd DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
 
 # fail build if none of the platform backends can be found
 if (NOT XCB_FOUND OR NOT XCB_COMPONENTS_FOUND)
