--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,5 +15,5 @@ ecm_add_test(
     ${FILENAME_TEST_SRCS}
     TEST_NAME "filename_test"
     LINK_LIBRARIES  Qt::Test
-        Qt::PrintSupport KF${QT_MAJOR_VERSION}::I18n KF${QT_MAJOR_VERSION}::ConfigCore KF${QT_MAJOR_VERSION}::GlobalAccel KF${QT_MAJOR_VERSION}::KIOCore KF${QT_MAJOR_VERSION}::WindowSystem KF${QT_MAJOR_VERSION}::XmlGui KF${QT_MAJOR_VERSION}::GuiAddons
+        Qt::PrintSupport KF6::I18n KF6::ConfigCore KF6::GlobalAccel KF6::KIOCore KF6::WindowSystem KF6::XmlGui KF6::GuiAddons
 )
