Add video save options page to settings dialog
Removes the format combobox from the main UI and puts all the video
saving related settings on a page in the settings dialog. The video
format does not typically need to be changed frequently, so we can free
up some space in the main UI.

Video saving related settings were moved to their own settings group
(VideoSave). Image saving related settings had their group renamed (Save
-> ImageSave). Settings were renamed to more clearly reflect whether
they were for images or videos. Most image related settings now have
video related counterparts.

Format settings are now enum based rather than string based. There is
documentation about the formats in `src/Platforms/VideoPlatform.h`.
There is also a VideoFormatModel that has all the available formats,
their extensions and labels that can be used in UIs as names for the
formats.

Because of the Format enum in VideoPlatform,
SpectacleCore::supportedVideoFormats() and
VideoPlatform::suggestedExtensions() were removed and replaced by
VideoPlatform::supportedFormats().

Rather than calling VideoPlatform::setExtension() at any time before
calling VideoPlatform::startRecording(), we now get
Settings::preferredVideoFormat() and set the format inside
startRecording(). Because of this, extension() and setExtension() were
removed.

BUG: 473298

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,9 +108,6 @@ if(NOT XCB_CURSOR_FOUND)
 	set(XCB_COMPONENTS_FOUND FALSE)
 endif()
 
-# add the spectacle.upd file
-install(FILES kconf_update/spectacle.upd DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
-
 # fail build if none of the platform backends can be found
 if (NOT XCB_FOUND OR NOT XCB_COMPONENTS_FOUND)
     message(FATAL_ERROR "No suitable backend platform was found. Currently supported platforms are: XCB Components Required: ${XCB_COMPONENTS_ERRORS}")
@@ -126,6 +123,7 @@ add_subdirectory(src)
 add_subdirectory(dbus)
 add_subdirectory(desktop)
 add_subdirectory(icons)
+add_subdirectory(kconf_update)
 add_subdirectory(tests)
 
 if (KF6DocTools_FOUND)
