Use "6" version vs QT_MAJOR_VERSION

--- a/kconf_update/CMakeLists.txt
+++ b/kconf_update/CMakeLists.txt
@@ -4,6 +4,6 @@ install(FILES spectacle.upd DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
 # add the scripts
 add_executable(spectacle-24.02.0-video_format "spectacle-24.02.0-video_format.cpp")
 target_link_libraries(spectacle-24.02.0-video_format
-    KF${QT_MAJOR_VERSION}::ConfigCore
-    KF${QT_MAJOR_VERSION}::XmlGui
+    KF6::ConfigCore
+    KF6::XmlGui
 )
