Add missing CI dependencies
Spectacle requires these, but they weren't in the list.

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -17,5 +17,7 @@ Dependencies:
     'frameworks/kglobalaccel': '@latest-kf6'
     'frameworks/kxmlgui': '@latest-kf6'
     'frameworks/purpose': '@latest-kf6'
+    'frameworks/kirigami': '@latest-kf6'
+    'frameworks/kguiaddons': '@latest-kf6'
     'plasma/kpipewire': '@latest-kf6'
     'third-party/wayland': '@latest'
