Add region selection UI for recording
Not actually used in this commit, will be used in a later commit

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -149,6 +149,7 @@ qt_add_qml_module(spectacle
     Gui/ShortcutsTextBox.qml
     Gui/SizeLabel.qml
     Gui/UndoRedoGroup.qml
+    Gui/VideoCaptureOverlay.qml
 )
 
 install(TARGETS spectacle ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
