Add outline to recorded area while doing region recording

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -20,4 +20,5 @@ Dependencies:
     'frameworks/kirigami': '@latest-kf6'
     'frameworks/kguiaddons': '@latest-kf6'
     'plasma/kpipewire': '@latest-kf6'
+    'plasma/layer-shell-qt': '@same'
     'third-party/wayland': '@latest'
