Add location copied inline gui message

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -135,6 +135,7 @@ qt_add_qml_module(spectacle
     Gui/ImageCaptureOverlay.qml
     Gui/ImageView.qml
     Gui/InlineMessage.qml
+    Gui/LocationCopiedMessage.qml
     Gui/Magnifier.qml
     Gui/MainToolBarContents.qml
     Gui/QmlUtils.qml
