Change filename placeholder format
Use `<placeholder>` instead of `%placeholder`. This makes it easier to
use
more descriptive or complex placeholders.

Also use more descriptive placeholders since we can and migrate old
placeholders.

With this new format we could add things like `<ISODate>` or
`<ShortDate>` as shorthands for common date/time formats.

I use `<key>` instead of `%key%` because sequences with obvious opening
and closing characters are easier to parse for humans and machines. I
chose '<' and '>' instead of other pairs of characters because I don't
need to escape '<' or '>' in regex. I do need to escape them in Rich
Text/HTML/XML, so it's sometimes less convenient than '{' and '}', but
not too bad.

BUG: 476023

--- a/kconf_update/CMakeLists.txt
+++ b/kconf_update/CMakeLists.txt
@@ -26,6 +26,12 @@ target_link_libraries(spectacle-24.02.0-keep_old_filename_templates
     KF6::XmlGui
 )
 
+add_executable(spectacle-24.02.0-change_placeholder_format "spectacle-24.02.0-change_placeholder_format.cpp")
+target_link_libraries(spectacle-24.02.0-change_placeholder_format
+    KF6::ConfigCore
+    KF6::XmlGui
+)
+
 # install C++ scripts to kconf_update_bin
 install(
     TARGETS
@@ -33,5 +39,6 @@ install(
         spectacle-24.02.0-keep_old_save_location
         spectacle-24.02.0-rename_settings
         spectacle-24.02.0-keep_old_filename_templates
+        spectacle-24.02.0-change_placeholder_format
     DESTINATION ${KDE_INSTALL_LIBDIR}/kconf_update_bin
 )
