Add support for extra placeholders
Placeholders that people might want, but aren't displayed by default
since there are a lot of them.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,10 @@ include(KDEInstallDirs)
 include(KDECMakeSettings)
 include(KDECompilerSettings NO_POLICY_SCOPE)
 
+# Set C++ standard separately from KDECompilerSettings since that is set to an older C++ standard.
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # used cmake macros
 
 include(ECMInstallIcons)
