Readd flatpak qt6

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,5 +6,4 @@ include:
     file:
       - /gitlab-templates/linux-qt6.yml
       - /gitlab-templates/freebsd-qt6.yml
-  # Disable until flatpak CI supports Qt 6.
-  #     - /gitlab-templates/flatpak.yml
+      - /gitlab-templates/flatpak.yml
