--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -2,12 +2,12 @@
     "id": "org.kde.spectacle",
     "branch": "master",
     "runtime": "org.kde.Platform",
-    "runtime-version": "5.15-22.08",
+    "runtime-version": "6.6-kf6preview",
     "sdk": "org.kde.Sdk",
     "command": "spectacle",
     "tags": ["nightly"],
     "desktop-file-name-suffix": " (Nightly)",
-    "finish-args": ["--share=ipc", "--socket=x11", "--socket=wayland",
+    "finish-args": ["--share=ipc", "--socket=fallback-x11", "--socket=wayland",
         "--talk-name=org.kde.kglobalaccel",
         "--talk-name=org.kde.KWin"],
 
