Use master branch

--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -15,7 +15,7 @@
         {
             "name": "kpipewire",
             "buildsystem": "cmake-ninja",
-            "sources": [ { "type": "git", "url": "https://invent.kde.org/plasma/kpipewire.git", "tag": "v5.27.5" } ]
+            "sources": [ { "type": "git", "url": "https://invent.kde.org/plasma/kpipewire.git", "branch": "master" } ]
         },
         {
             "name": "spectacle",
