Fix layer-shell-qt CI dep
same doesn't work because spectacle and layer-shell-qt are on different release units with different stable branch names

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -20,6 +20,6 @@ Dependencies:
     'frameworks/kirigami': '@latest-kf6'
     'frameworks/kguiaddons': '@latest-kf6'
     'plasma/kpipewire': '@latest-kf6'
-    'plasma/layer-shell-qt': '@same'
+    'plasma/layer-shell-qt': '@latest-kf6'
     'third-party/wayland': '@latest'
     'third-party/zxing-cpp': '@latest'
