--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -20,5 +20,5 @@ Dependencies:
     'frameworks/kirigami': '@latest-kf6'
     'frameworks/kguiaddons': '@latest-kf6'
     'plasma/kpipewire': '@latest-kf6'
-    'plasma/layer-shell-qt': '@same'
+    'plasma/layer-shell-qt': '@latest-kf6'
     'third-party/wayland': '@latest'
