Use new undo/redo history and item traits system with smart pointers
This MR adds a new undo/redo item system based on smart pointers instead of raw pointers and items that have drawable traits rather than types that match a specific AnnotationTool type.

## Pointer Safety

Previously, we used lists of raw pointers to annotation objects for undo/redo history. Each annotation object also had a `replaces` and `replacedBy` raw pointer that were used to indicate that a later item replaced an earlier item and prevent the earlier item from being rendered. The selected action wrapper also had a raw pointer to know which annotation object was selected. As long as all memory was properly freed, there wasn't much of an issue with the previous undo/redo lists, but the selected action pointer and `replaces`/`replacedBy` pointers could easily become dangling pointers and cause segfaults if a developer wasn't careful enough. We also used polymorphic classes for the annotation objects with an `EditAction` virtual base class. In order to use all the attributes of an annotation object, you'd need to cast them to the correct type. The type of polymorphism used made it awkward to share features between classes.

The new system uses lists of shared_ptrs for undo/redo history. The previous selected pointer and `replaces`/`replacedBy` pointers were turned into weak_ptrs. `replaces`/`replacedBy` were also renamed to `parent`/`child` since I found it took a bit too much effort to avoid confusing `replaces` and `replacedBy`. We still have to check if the pointer isn't empty before trying to use it, but the pointers are no longer at risk of becoming dangling pointers and shared_ptr ensures that the object it points to is kept as long as you're still using the shared_ptr.

Just as an example, the changes fix https://bugs.kde.org/show_bug.cgi?id=469919.

## New/Different Behaviors

When creating a new item, the AnnotationTool type decides which traits are enabled and how they should be initial

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,9 +36,12 @@ add_executable(spectacle
     Gui/SpectacleMenu.cpp
     Gui/ViewerWindow.cpp
     Gui/Annotations/AnnotationDocument.cpp
+    Gui/Annotations/AnnotationTool.cpp
     Gui/Annotations/AnnotationViewport.cpp
-    Gui/Annotations/EditAction.cpp
     Gui/Annotations/EffectUtils.cpp
+    Gui/Annotations/History.cpp
+    Gui/Annotations/QmlPainterPath.cpp
+    Gui/Annotations/Traits.cpp
     Gui/SettingsDialog/ImageSaveOptionsPage.cpp
     Gui/SettingsDialog/VideoSaveOptionsPage.cpp
     Gui/SettingsDialog/SettingsDialog.cpp
