Fix build with ZXing master
That added new API that require exceptions to be enabled. A similar fix
has already been applied to KF::Prison.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,6 +56,9 @@ add_executable(spectacle
     Platforms/screencasting.cpp
 )
 
+# exceptions are needed for code using ZXing
+kde_source_files_enable_exceptions(ExportManager.cpp)
+
 if(XCB_FOUND)
     target_sources(spectacle PRIVATE Platforms/ImagePlatformXcb.cpp Platforms/ImagePlatformXcb.h)
 
