Use KConfigDialogManager system instead of directly setting video format
BUG: 481390
(cherry picked from commit 5429d6b914009481a4f7d2df706c02438eca9690)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable(spectacle
     Gui/Annotations/EditAction.cpp
     Gui/Annotations/EffectUtils.cpp
     Gui/SettingsDialog/ImageSaveOptionsPage.cpp
+    Gui/SettingsDialog/VideoFormatComboBox.cpp
     Gui/SettingsDialog/VideoSaveOptionsPage.cpp
     Gui/SettingsDialog/SettingsDialog.cpp
     Gui/SettingsDialog/GeneralOptionsPage.cpp
