--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -14,6 +14,7 @@
     "modules": [
         {
             "name": "kpipewire",
+            "config-opts": [ "-DBUILD_TESTING=OFF" ],
             "buildsystem": "cmake-ninja",
             "sources": [ { "type": "git", "url": "https://invent.kde.org/plasma/kpipewire.git", "branch": "master" } ]
         },
