Split DashedOutline from Outline
No need to have a ShapePath for dashes in contexts where they won't be used.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -141,6 +141,7 @@ qt_add_qml_module(spectacle
     Gui/CaptureOptions.qml
     Gui/CaptureSettingsColumn.qml
     Gui/CopiedMessage.qml
+    Gui/DashedOutline.qml
     Gui/DelaySpinBox.qml
     Gui/DialogPage.qml
     Gui/EmptyPage.qml
