Enforce passing tests
(cherry picked from commit a26743c1139d164ad0e263ecca327f754c48aaad)

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -23,3 +23,6 @@ Dependencies:
     'plasma/layer-shell-qt': '@latest-kf6'
     'third-party/wayland': '@latest'
     'third-party/zxing-cpp': '@latest'
+
+Options:
+  require-passing-tests-on: ['Linux', 'FreeBSD', 'Windows']
