--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -20,10 +20,10 @@ Dependencies:
     'frameworks/kirigami': '@latest-kf6'
     'frameworks/kguiaddons': '@latest-kf6'
     'frameworks/kstatusnotifieritem': '@latest-kf6'
+    'frameworks/prison': '@latest-kf6'
     'plasma/kpipewire': '@latest-kf6'
     'plasma/layer-shell-qt': '@latest-kf6'
     'third-party/wayland': '@latest'
-    'third-party/zxing-cpp': '@latest'
 
 Options:
   require-passing-tests-on: ['Linux', 'FreeBSD', 'Windows']
