Make system tray icon easier to notice
Switches from QSystemTrayIcon to KStatusNotifierItem.

The icon has a scale animation when it appears that repeats a few times.

A system notification also appears when recording has started that tells you about the system tray icon.

CCBUG: 480023

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -19,6 +19,7 @@ Dependencies:
     'frameworks/purpose': '@latest-kf6'
     'frameworks/kirigami': '@latest-kf6'
     'frameworks/kguiaddons': '@latest-kf6'
+    'frameworks/kstatusnotifieritem': '@latest-kf6'
     'plasma/kpipewire': '@latest-kf6'
     'plasma/layer-shell-qt': '@latest-kf6'
     'third-party/wayland': '@latest'
