--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -119,6 +119,7 @@ target_link_libraries(spectacle PRIVATE
     KF6::XmlGui
     KF6::GuiAddons
     KF6::KirigamiPlatform
+    KF6::StatusNotifierItem
     K::KPipeWireRecord
     Wayland::Client
     LayerShellQt::Interface
