Allow system calls for debugging

--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -23,7 +23,8 @@
         "--talk-name=org.kde.KWin",
         "--talk-name=org.kde.KWin.ScreenShot2",
         "--talk-name=org.kde.plasmashell",
-        "--own-name=org.kde.spectacle"
+        "--own-name=org.kde.spectacle",
+        "--allow=devel"
     ],
     "modules": [
         {
